--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -15,7 +15,7 @@
   margin: 22px 0px 22px 24px;
 }
 
-.logo-invisible{
+.invisible{
   display: none;
 }
 
