--- a/src/sass/components/_support.scss
+++ b/src/sass/components/_support.scss
@@ -90,7 +90,7 @@
   margin-left: 40px;
   width: 159px;
   height: 188px;
-  border: 2px solid rgb(6, 6, 6);
+  // border: 2px solid rgb(6, 6, 6);
   overflow: hidden;
 }
 
